--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Stack Overflow - Where Developers Learn, Share, &amp; Build Careers</title>
+    <title>Readerflow - Where Students Learn, Share, &amp; Build Careers</title>
     <link rel="shortcut icon" href="https://cdn.sstatic.net/Sites/stackoverflow/Img/favicon.ico?v=ec617d715196">
     <link rel="apple-touch-icon" href="https://cdn.sstatic.net/Sites/stackoverflow/Img/apple-touch-icon.png?v=c78bd457575a">
     <link rel="image_src" href="https://cdn.sstatic.net/Sites/stackoverflow/Img/apple-touch-icon.png?v=c78bd457575a">
@@ -181,7 +181,7 @@
         </div>
         <div class="footer-nav">
             <div class="footer-nav-col">
-                <div class="footer-links-title"><a href="#">Stack Overflow</a></div>
+                <div class="footer-links-title"><a href="#">Readerflow</a></div>
                 <ul class="footer-links">
                     <li class="footer-link-item"><a href="#" class="footer-link">Questions</a></li>
                     <li class="footer-link-item"><a href="#" class="footer-link">Jobs</a></li>
